<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/header_title"
        android:textColor="@color/fontColor"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/imgDesc_coffeeBeanIcon"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_coffeebean_icon" />

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="40dp"
        android:background="#59330F"
        android:orientation="vertical"
        android:paddingTop="15dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="20dp"
            android:background="#673333"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/textView112"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_header"
                android:textColor="@color/fontColor"
                android:textSize="25sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="131dp"
            android:layout_height="93dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-2dp"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:contentDescription="@string/imgDesc_coffee"
            app:srcCompat="@drawable/coffee_types" />

        <LinearLayout
            android:id="@+id/lol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView11"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:text="@string/form_createRecipe_name"
                android:textColor="@color/fontColor"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_recipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:paddingBottom="3dp"
                android:text="@string/form_createRecipe_supplements"
                android:textColor="@color/fontColor"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/input_ingredients"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:autofillHints="xx"
                android:gravity="top|start"
                android:padding="10dp"
                android:textSize="14sp"
                android:background="#ffffff"
                android:hint="@string/form_hint_ingredients"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:paddingBottom="3dp"
                android:text="@string/form_createRecipe_bean"
                android:textColor="@color/fontColor"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/input_coffeeBean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-5dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginEnd="-5dp"
                android:layout_marginRight="-5dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="79dp"
                    android:layout_marginRight="79dp"
                    android:paddingTop="13dp"
                    android:paddingBottom="3dp"
                    android:text="@string/form_createRecipe_volume"
                    android:textColor="@color/fontColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView113"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingTop="13dp"
                    android:paddingBottom="3dp"
                    android:text="@string/form_createRecipe_prepTime"
                    android:textColor="@color/fontColor"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_coffeeServings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="50dp"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:hint="@string/form_hint_volume"
                    android:textSize="14sp" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_prepTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:inputType="time"
                    android:padding="10dp"
                    android:hint="@string/form_hint_prepTime"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_submit_recipe"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="35dp"
            android:background="#996345"
            android:text="@string/submit_recipe_button"
            android:textColor="@color/fontColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>