<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="146dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"

        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="162dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/header_title"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="62dp"
        android:layout_height="51dp"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imgDesc_coffeeBeanIcon"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_coffeebean_icon" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="253dp"
        android:layout_height="734dp"
        android:layout_marginEnd="256dp"
        android:layout_marginRight="256dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@drawable/login_background" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="228dp"
        android:layout_height="438dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="#462E2E"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:paddingTop="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.251">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:text="@string/form_name"
            android:textColor="@color/fontColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="#ffffff"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="14sp"
            android:hint="Username" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="13dp"
            android:paddingBottom="3dp"
            android:text="@string/form_email"
            android:textColor="@color/fontColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="#ffffff"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="14sp"
            android:hint="E-mail" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="13dp"
            android:paddingBottom="3dp"
            android:text="@string/form_password"
            android:textColor="@color/fontColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="Password"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="13dp"
            android:paddingBottom="3dp"
            android:text="@string/form_confirm_password"
            android:textColor="@color/fontColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/register_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="Password"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <Button
            android:id="@+id/register_submit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="#996345"
            android:text="@string/register_title"
            android:textColor="@color/fontColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>