<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="89dp"
        android:layout_height="69dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/imgDesc_coffeeBeanIcon"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/main_coffeebean_icon" />

    <Button
        android:id="@+id/button_nextIntroduction"
        android:layout_width="197dp"
        android:layout_height="63dp"
        android:background="#62351C"
        android:text="@string/next_button"
        android:textColor="@color/fontColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="201dp"
        android:layout_height="33dp"
        android:gravity="center_horizontal"
        android:text="@string/header_title"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="203dp"
        android:layout_height="52dp"
        android:layout_marginTop="96dp"
        android:gravity="center_horizontal"
        android:text="@string/intro_title"
        android:textAlignment="center"

        android:textColor="@color/fontColor"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_marginTop="20dp"
        android:background="#543131"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/intro_c1_content"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.757"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="160dp"
            android:layout_height="110dp"
            android:contentDescription="@string/imgDesc_coffeeBeanIcon"
            app:srcCompat="@drawable/intro_coffee_c1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_marginTop="24dp"
        android:background="#473434"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="110dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/imgDesc_coffeeBeanIcon"
            app:srcCompat="@drawable/intro_coffee_c1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/intro_c1_content"
            android:textAlignment="center"
            android:textColor="@color/fontColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.757"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>